2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.addin.xml: Update MD version.

2008-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/GettextCatalog.cs: Fix logic that determines the location
	  of locale directory.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/FileService.cs: Make NotifyFileChanged safer against
	  exceptions.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.ProgressMonitoring/NullProgressMonitor.cs: Added new
	  override.
	* MonoDevelop.Core/Runtime.cs: Use a version specific default MD add-in
	  repo.

2008-01-17  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/ProcessHostController.cs:
	  If MD is running in debug mode (i.e. stack traces have line numbers)
	  then the process hosting RemoteProcessObjects should be in debug 
	  mode too. Also, remove an "sh" call to improve portability.

2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/Runtime.cs: Get add-ins from a version specific
	  repository.

2008-01-16  Michael Hutchinson <mhutchinson@novell.com> 

	* Makefile.am, MonoDevelop.Core.mdp, MonoDevelop.Core/GettextCatalog.cs,
	  MonoDevelop.Core/GettextCatalog.cs.in: Make Gettext catalogue path
	  relative to MD rather than hardcoding the prefix set at build time.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Core.addin.xml, MonoDevelop.Core.mdp,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/DesktopApplication.cs,
	  MonoDevelop.Core/PlatformService.cs: Moved PlatformService to
	  MD.Core.Gui. Removed old FileIconService class, which is now implemented
	  in PlatformService.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Execution/ProcessService.cs: Fix warning.
	* MonoDevelop.Core.mdp: Updated.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/SystemAssemblyService.cs: Catch exceptions thrown by